@@ -16,6 +16,8 @@
   * icons_get_from_path: Fail with an explicit error message if called with an
     empty icon path
 
+  * print_instructions: Improve message readability
+
 2.10.3
 
   * write_bin - init_prefix_files: Do not ignore symbolic links in
